crates/carta/tests/snapshots/golden_e2e__jira__native__panel-trailing.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Para
    [ Str "{panel:title=x}trailing" , LineBreak , Str "body" ]
]
