crates/carta/tests/snapshots/golden_e2e__jira__native__panel.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Div
    ( "" , [ "panel" ] , [] )
    [ Div
        ( "" , [ "panelheader" ] , [] )
        [ Plain [ Strong [ Str "Notice" ] ] ]
    , Para
        [ Str "Body"
        , Space
        , Str "text"
        , Space
        , Str "inside"
        , Space
        , Str "the"
        , Space
        , Str "panel."
        ]
    ]
]
