crates/carta/tests/snapshots/golden_e2e__jira__native__quote.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ BlockQuote
    [ Para
        [ Str "A"
        , Space
        , Str "single"
        , Space
        , Str "quoted"
        , Space
        , Str "line."
        ]
    ]
, BlockQuote
    [ Para
        [ Str "A"
        , Space
        , Str "quoted"
        , Space
        , Str "paragraph"
        , Space
        , Str "inside"
        , Space
        , Str "a"
        , Space
        , Str "block."
        ]
    ]
]
