crates/carta/tests/snapshots/golden_e2e__jira__native__rule.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Para
    [ Str "Above" , Space , Str "the" , Space , Str "rule." ]
, HorizontalRule
, Para
    [ Str "Below" , Space , Str "the" , Space , Str "rule." ]
]
