crates/carta/tests/snapshots/golden_e2e__jira__native__smart-dashes.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Para
    [ Str "Spaced"
    , Space
    , Str "\8211"
    , Space
    , Str "en"
    , Space
    , Str "and"
    , Space
    , Str "\8212"
    , Space
    , Str "em"
    , Space
    , Str "dashes"
    , Space
    , Str "appear"
    , Space
    , Str "mid-line."
    ]
, Para
    [ Str "A"
    , Space
    , Str "word"
    , Space
    , Str "hugging"
    , Space
    , Str "three"
    , Space
    , Str "word-\8211"
    , Space
    , Str "folds"
    , Space
    , Str "to"
    , Space
    , Str "a"
    , Space
    , Str "hyphen"
    , Space
    , Str "and"
    , Space
    , Str "en"
    , Space
    , Str "dash."
    ]
, Para
    [ Str "A"
    , Space
    , Str "word"
    , Space
    , Str "hugging"
    , Space
    , Str "four"
    , Space
    , Str "word-\8212"
    , Space
    , Str "folds"
    , Space
    , Str "to"
    , Space
    , Str "a"
    , Space
    , Str "hyphen"
    , Space
    , Str "and"
    , Space
    , Str "em"
    , Space
    , Str "dash."
    ]
, Para
    [ Str "Two"
    , Space
    , Str "hyphens"
    , Space
    , Str "word--"
    , Space
    , Str "stay"
    , Space
    , Str "literal"
    , Space
    , Str "before"
    , Space
    , Str "a"
    , Space
    , Str "space."
    ]
, Para
    [ Str "A"
    , Space
    , Str "trailing"
    , Space
    , Str "run"
    , Space
    , Str "sits"
    , Space
    , Str "at"
    , Space
    , Str "the"
    , Space
    , Str "very"
    , Space
    , Str "end"
    , Space
    , Str "--"
    ]
]
