crates/carta/tests/snapshots/golden_e2e__jira__native__symbols.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Para
    [ Str "Symbols"
    , Space
    , Str "\128077"
    , Space
    , Str "and"
    , Space
    , Str "\10060"
    , Space
    , Str "and"
    , Space
    , Str "\10071"
    , Space
    , Str "here."
    ]
, Para
    [ Str "Ranges"
    , Space
    , Str "1--2"
    , Space
    , Str "and"
    , Space
    , Str "an"
    , Space
    , Str "em"
    , Space
    , Str "\8212"
    , Space
    , Str "dash."
    ]
, Para
    [ Str "A"
    , Space
    , Str "\8212"
    , Space
    , Emph [ Str "quoted" , Space , Str "citation" ]
    , Space
    , Str "line."
    ]
]
